# qa-sentinel

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: demo.yml  publish-python.yml  test-merge.yml
example/: demo.spec.ts  feature-demo.spec.ts  github-actions-workflow.yml  playwright-advanced.config.ts  playwright-blob.config.ts  playwright-merge.config.ts  playwright-premium.config.ts  playwright.config.ts
example/parallel/: test1.spec.ts  test2.spec.ts
keys/: public.pem
python/: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  SETUP_COMPLETE.md  pyproject.toml
python/examples/: run_example.py  test_basic.py
python/qa_sentinel_python/: __init__.py  bridge.py  converter.py  plugin.py
python/scripts/: bundle_dist.py
python/tests/: conftest.py  test_bridge.py  test_converter.py  test_plugin.py
python/tests/fixtures/: sample_pytest_report.json
specs/: 2026-02-23-pro-tier.md
src/: merge-history.ts  premium-integration.test.ts  qa-sentinel.test.ts  qa-sentinel.ts  types.ts
src/ai/: prompt-builder.ts
src/analyzers/: ai-analyzer-config.test.ts  ai-analyzer.test.ts  ai-analyzer.ts  failure-clusterer.test.ts  failure-clusterer.ts  flakiness-analyzer.test.ts  flakiness-analyzer.ts  index.ts  performance-analyzer.test.ts  performance-analyzer.ts  retry-analyzer.test.ts  retry-analyzer.ts  stability-scorer.test.ts  stability-scorer.ts
src/cloud/: index.ts  uploader.ts
src/collectors/: attachment-collector.test.ts  attachment-collector.ts  history-collector.test.ts  history-collector.ts  index.ts  network-collector.test.ts  network-collector.ts  (+1 more)
(+49 files in other folders)
