[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-sentinel-python"
version = "1.0.0"
description = "Python bridge for qa-sentinel - AI-powered test analysis and reporting for pytest"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "vbonite-sm" }
]
keywords = [
    "playwright",
    "pytest",
    "testing",
    "reporter",
    "html-reporter",
    "ai",
    "test-analysis",
    "qa-sentinel"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pytest>=7.4",
    "pytest-json-report>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest-playwright",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/vbonite-sm/qa-sentinel"
Repository = "https://github.com/vbonite-sm/qa-sentinel"
Issues = "https://github.com/vbonite-sm/qa-sentinel/issues"

[project.entry-points.pytest11]
qa_sentinel = "qa_sentinel_python.plugin"

[tool.setuptools.packages.find]
include = ["qa_sentinel_python*"]

[tool.setuptools.package-data]
qa_sentinel_python = [
    "py.typed",
    "_bundled_dist/**/*.js",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
